@@ -29,7 +29,7 @@ int main(int argc, char *argv[])
     RawKeybdApp a(argc, argv);
 #ifdef Q_OS_LINUX
     a.setWindowIcon(QIcon(":/vpiano/vmpk_32x32"));
-#endif Q_OS_LINUX
+#endif //Q_OS_LINUX
     VPiano w;
     if (w.isInitialized()) {
         w.show();
